@@ -1,3 +1,8 @@
+2001-08-06  Peter Williams  <peterw@ximian.com>
+
+	* Makefile.am, gnome-ui-init.c, gnome-window.c: Track the
+	rename of gnome-init.c to gnome-ui-init.c
+
 2001-08-01  Anders Carlsson  <andersca@codefactory.se>
 
 	* gnome-about.c: Empty stub for API functions until I
